--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
 <p>Provide an analytic report of 1,500 words or less that is structured as outlined below, utilizing the dataset.txt provided by Wells Fargo.</p>
 
+<p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/050e56f82eea7358e059f53b815887b4d0e31bc9/images/social_media_freak.jpg" alt="social_media"></p>
+
 <h4>
 <a id="question-1---what-financial-topics-do-consumers-discuss-on-social-media-and-what-caused-the-consumers-to-post-about-this-topic" class="anchor" href="#question-1---what-financial-topics-do-consumers-discuss-on-social-media-and-what-caused-the-consumers-to-post-about-this-topic" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Question 1</strong> - What financial topics do consumers discuss on social media and what caused the consumers to post about this topic?</h4>
 
