Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@ summary(<span class="pl-smi">fit</span>) <span class="pl-c"># detailed summary o
 
 <p>The most frequent words obtained served as a guide to understand what subjects customers are talking about. According to our results, customers are commenting about online services, phone calls, customer service, and bank accounts. </p>
 
+<p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/050e56f82eea7358e059f53b815887b4d0e31bc9/images/mobile-banking.jpg" alt="banking"></p>
+
 <h4>
 <a id="classification-tree" class="anchor" href="#classification-tree" aria-hidden="true"><span class="octicon octicon-link"></span></a>Classification Tree</h4>
 
