Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -352,6 +352,13 @@ rect.hclust(<span class="pl-smi">fit</span>, <span class="pl-v">k</span> <span c
 
 <p>According to the classification tree results, positive statements within a .5 relevancy are "thanks," "very," "service," "support," "love," and "thank." With more work on the csv's files, we could utilize this method to obtain only the positive or negative comments.
 Out of the 301 comments in the pos.txt csv file, 137 were actual positive comments towards one of the banks. We found 152 observations in the neg.texts csv file, 103 of those were negative comments about one of the banks.</p>
+
+<h4>
+<a id="cluster-dendrogram" class="anchor" href="#cluster-dendrogram" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cluster Dendrogram</h4>
+
+<p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/cad45dbc9a8d54d0bf8062e8591d4dae1c930de0/images/cluster%20dendogram.png" alt="cluster_dendrogram"></p>
+
+<p>With a cluster dendrogram we can get close to predicting how words relate to each other, and how often. In the example above, we could predict that "banka", "bankb," and "bankd" are the most mentioned on the internet. Another prediction from this dendrogram shows customers commenting about business bank accounts, and banka. </p>
       </section>
     </div>
 
