Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ rect.hclust(<span class="pl-smi">fit</span>, <span class="pl-v">k</span> <span c
 <p>In general, the topics and substance are consistent across the banking industry.</p>
 
 <h3>
-<a id="deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results-should-include-graphs-or-charts" class="anchor" href="#deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results-should-include-graphs-or-charts" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Deliverable E</strong> - Create a narrative of insights supported by the quantitative results (should include graphs or charts).</h3>
+<a id="deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results" class="anchor" href="#deliverable-e---create-a-narrative-of-insights-supported-by-the-quantitative-results" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Deliverable E</strong> - Create a narrative of insights supported by the quantitative results.</h3>
 
 <h4>
 <a id="100-most-frequent-words" class="anchor" href="#100-most-frequent-words" aria-hidden="true"><span class="octicon octicon-link"></span></a>100 Most Frequent Words</h4>
@@ -360,8 +360,8 @@ Out of the 301 comments in the pos.txt csv file, 137 were actual positive commen
 
 <p>With a cluster dendrogram we can get close to predicting how words relate to each other, and how often. In the example above, we could predict that "banka", "bankb," and "bankd" are the most mentioned on the internet. Another prediction from this dendrogram shows people commenting about business bank accounts, and "banka" mentioned on twitter. </p>
 
-<h2>
-<a id="conclusion" class="anchor" href="#conclusion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conclusion</h2>
+<h1>
+<a id="conclusion" class="anchor" href="#conclusion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conclusion</h1>
 
 <p>In conclusion, we can using classification to determine the relevancy of the observations to obtain a more accurate data. After identifying which comments were relevant we noticed that the classifier works better with negative comments. According to the probabilities of relevance, approximately half of the data set contains comments related to banking. Finally, we can say that a sample of the American population utilize social media for a banking conversation, if they want to express gratitude, and/or to complain about the customer service.</p>
       </section>
