--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@ rect.hclust(<span class="pl-smi">fit</span>, <span class="pl-v">k</span> <span c
 
 <p><img src="https://raw.githubusercontent.com/jennsoto/wells_fargo_analytics/0c1e1a57e68434d3f06d16b7808de094ec7a0e41/images/classification%20tree.png" alt="classification_tree"></p>
 
-<p>According to the classification tree results, positive statements within a .5 relevancy are "thanks," "very," "service," "support," "love," and "thank." With more work on the csv's files, we could utilize this method to obtain only the positive or negative comments.
-Out of the 301 comments in the pos.txt csv file, 137 were actual positive comments towards one of the banks. We found 152 observations in the neg.texts csv file, 103 of those were negative comments about one of the banks.</p>
+<p>According to the classification tree results, positive statements within a .5 relevancy are "thanks," "very," "service," "support," "love," and "thank." With more work on the csv's files we could utilize this method to obtain only the positive or negative comments.
+Out of the 301 comments in the pos.txt csv file, 137 were actual positive comments towards one of the banks. We found 152 observations in the neg.texts csv file and 103 of those were negative comments about one of the banks.</p>
 
 <h4>
 <a id="cluster-dendrogram" class="anchor" href="#cluster-dendrogram" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cluster Dendrogram</h4>
@@ -360,7 +360,7 @@ Out of the 301 comments in the pos.txt csv file, 137 were actual positive commen
 <h1>
 <a id="conclusion" class="anchor" href="#conclusion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conclusion</h1>
 
-<p>In conclusion, we can using classification to determine the relevancy of the observations to obtain a more accurate data. After identifying which comments were relevant we noticed that the classifier works better with negative comments. According to the probabilities of relevance, approximately half of the data set contains comments related to banking. Finally, we can say that a sample of the American population utilize social media for a banking conversation, if they want to express gratitude, and/or to complain about the customer service.</p>
+<p>In conclusion, we can use classification to determine the relevancy of the observations to obtain a more accurate data. After identifying which comments were relevant we noticed that the classifier works better with negative comments. According to the probabilities of relevance, approximately half of the data set contains comments related to banking. Finally, we can say that a majority of a sample from the American population utilize social media for a banking conversation, to express gratitude, and/or to complain about the customer service.</p>
         </section>
 
         <aside id="sidebar">
